[tool.poetry]
name = "advent2023"
version = "0.1.0"
description = ""
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
jupyterlab = "^4.0.9"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
